[gd_scene load_steps=2 format=3 uid="uid://ds86ltp3shv7b"]

[ext_resource type="Script" path="res://items/settings/SaveLoadButtons.gd" id="1_tup6g"]

[node name="SaveLoadButtons" type="HBoxContainer"]
script = ExtResource("1_tup6g")

[node name="Label" type="Label" parent="."]
offset_right = 125.0
offset_bottom = 31.0
size_flags_vertical = 1
text = "Save game label"
vertical_alignment = 1

[node name="LoadButton" type="Button" parent="."]
offset_left = 129.0
offset_right = 222.0
offset_bottom = 31.0
text = "Load game"

[node name="OverwriteButton" type="Button" parent="."]
offset_left = 226.0
offset_right = 312.0
offset_bottom = 31.0
text = "Overwrite"

[node name="DeleteButton" type="Button" parent="."]
offset_left = 316.0
offset_right = 375.0
offset_bottom = 31.0
text = "Delete"
